<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <color name="grey">#7F7F7F</color>
    <color name="white">#FFFFFF</color>
    
    <string name="app_name">Mordor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_string">Welcome to Login</string>
    <string name="title_login">Login Screen</string>
    <string name="title_location_details">Confirm Village/Phase</string>
    <string name="title_user_settings">User Settings</string>
    <string name="title_head_of_household">Head of Household</string>
    <string name="title_village_home">Village Home</string>
    <string name="title_head_of_household_details">Add / Edit HoH</string>
    <string name="title_guardian">Select Mother/Guardian</string>
    <string name="title_guardian_details">Add/Edit Mother/Guardian</string>
    <string name="title_child">Select Child</string>
    <string name="title_child_summary">Child</string>
    <string name="title_child_details">Add / Edit Child</string>
    <string name="title_treatment">Add / Edit Treatment</string>
    <string name="title_start">Start</string>
    <string name="title_household_review">Household Review</string>
    
    <string name="label_button_save">Save</string>
    <string name="label_button_confirm">Confirm</string>
    <string name="label_button_edit">Edit</string>
    <string name="label_button_add_family">Add Family</string>
    <string name="label_button_add_coordinates">Add Coordinates</string>
    <string name="label_button_settings">Settings</string>
    <string name="label_button_add_photo">Add photo</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_sync_now">Sync Now</string>
    <string name="label_button_home">Home</string>
    <string name="label_button_sync_interval">Sync Interval</string>
    <string name="label_button_sync_retry_interval">Sync Retry Interval</string>
    <string name="label_button_add_head_of_household">Add Head of Household</string>
    <string name="label_button_add_guardian">Add Mother/Guardian</string>
    <string name="label_button_add_child">Add Child</string>
    <string name="label_button_census">CENSUS</string>
    <string name="label_button_treatment">TREATMENT</string>
    <string name="label_button_status">STATUS</string>
    <string name="label_button_delete">Delete</string>
    <string name="label_button_treatment_1">Treatment...</string>
    
    
    <string name="label_checkbox_remember_me">Remember Me</string>
    <string name="label_checkbox_sync_activated">Sync Activated</string>
    <string name="label_checkbox_obtained_consent">Obtained Consent</string>
    
    <string name="label_username">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_village">Village</string>
    <string name="label_phase">Phase</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_email">Email</string>
    <string name="label_mobile_1">Mobile 1</string>
    <string name="label_mobile_2">Mobile 2</string>
    <string name="label_sync_settings">Sync Settings</string>
    <string name="label_age">Age</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_note">Note</string>
    <string name="label_status">Status</string>
    <string name="label_treatment">Treatment</string>
    <string name="label_switch_gender">Gender</string>
    <string name="label_switch_pregnant">Pregnant?</string>
    <string name="label_pregnant_months">How many months?</string>
    <string name="label_year">Years</string>
    <string name="label_month">Months</string>
    <string name="label_week">Weeks</string>
    <string name="label_dose">Dose (mL)</string>
    <string name="label_radio_button_year">Year</string>
    <string name="label_radio_button_month">Month</string>
    <string name="label_radio_button_week">Week</string>
    <string name="label_address">Address</string>
    <string name="label_button_add_hoh">Add Head Of Household</string>
    <string name="label_button_add_household">Add Household</string>
    <string name="label_button_edit_hoh">Edit Head Of Household</string>
    <string name="label_button_complete_household">Complete Household</string>
    <string name="label_button_gps">GPS</string>
    <string name="label_button_lock">LOCK</string>
    
    
    
    
</resources>