<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center_horizontal"
    android:focusable="true" 
    android:focusableInTouchMode="true"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="20sp"
        android:text="@null"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingLeft="140dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextFirstName"
        android:layout_alignLeft="@+id/editTextFirstName"
        android:layout_alignTop="@+id/editTextFirstName"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/label_first_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextFirstName"
        android:layout_alignRight="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingLeft="140dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextLastName"
        android:layout_alignLeft="@+id/editTextLastName"
        android:layout_alignTop="@+id/editTextLastName"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/label_last_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLastName"
        android:layout_alignRight="@+id/editTextLastName"
        android:layout_below="@+id/editTextLastName"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingLeft="140dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextNickname"
        android:layout_alignLeft="@+id/editTextNickname"
        android:layout_alignTop="@+id/editTextNickname"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/label_nickname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Switch
        android:id="@+id/switch_male_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNickname"
        android:layout_below="@+id/editTextNickname"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_modified_states"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:switchTextAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_switch_gender"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textOff="@string/label_female"
        android:textOn="@string/label_male" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNickname"
        android:layout_alignRight="@+id/switch_male_female"
        android:layout_below="@+id/switch_male_female"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="140dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextAge"
        android:layout_alignLeft="@+id/editTextAge"
        android:layout_alignTop="@+id/editTextAge"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/label_age"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAge"
        android:layout_alignRight="@+id/editTextNickname"
        android:layout_below="@+id/editTextAge"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:paddingBottom="5dp"
        android:paddingLeft="140dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autoCompleteTextViewStatus"
        android:layout_alignLeft="@+id/autoCompleteTextViewStatus"
        android:layout_alignTop="@+id/autoCompleteTextViewStatus"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/label_status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TableRow>

            <Button
                android:id="@+id/buttonHousehold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/highlight_square_corners"
                android:text="@string/label_button_home" />

            <Button
                android:id="@+id/buttonAddCoordinates"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/highlight_square_corners"
                android:text="@string/label_button_add_coordinates" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/highlight_square_corners"
                android:text="@string/label_button_settings" />
        </TableRow>
    </TableLayout>

<!--     <TextView
        android:id="@+id/textViewTreatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextViewStatus"
        android:layout_below="@+id/autoCompleteTextViewStatus"

        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/buttonTreatment"
        android:background="@drawable/round_corners"
        android:paddingLeft="140dp"
        android:paddingTop="10dp"
        android:lines="5"

        android:textAppearance="?android:attr/textAppearanceLarge" />
 -->
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewTreatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextViewStatus"
        android:layout_below="@+id/autoCompleteTextViewStatus"
        android:layout_toLeftOf="@+id/buttonTreatment"
        android:background="@drawable/edittext_modified_states"
        android:ems="10"
        android:paddingBottom="5dp"        
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="140dp"
        android:paddingTop="10dp"/>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autoCompleteTextViewTreatment"
        android:layout_alignLeft="@+id/autoCompleteTextViewTreatment"
        android:layout_alignTop="@+id/autoCompleteTextViewTreatment"
        android:paddingLeft="10dp"
		android:gravity="left|center_vertical"
        android:text="@string/label_treatment"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
 
    <Button
        android:id="@+id/buttonTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/autoCompleteTextViewStatus"
        android:layout_alignTop="@+id/autoCompleteTextViewTreatment"
        android:layout_below="@+id/autoCompleteTextViewStatus"
        android:background="@drawable/round_corners"
        android:padding="10dp"
        android:text="@string/label_button_treatment_1" />

    <RadioGroup
        android:id="@+id/radioAgeUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTreatment"
        android:layout_alignRight="@+id/editTextNickname"
        android:layout_above="@+id/autoCompleteTextViewStatus">


        <RadioButton
            android:id="@+id/radioYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_radio_button_year" />

        <RadioButton
            android:id="@+id/radioMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_radio_button_month" />

        <RadioButton
            android:id="@+id/radioWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radio_button_week" />
    </RadioGroup>

   
    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextViewTreatment"
        android:layout_alignRight="@+id/buttonTreatment"
        android:layout_below="@+id/buttonTreatment"
        android:background="@drawable/edittext_modified_states"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="3"
        android:paddingLeft="140dp"
        android:paddingTop="10dp"
        android:isScrollContainer="false" 
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextNote"
        android:layout_alignLeft="@+id/editTextNote"
        android:layout_alignTop="@+id/editTextNote"
        android:gravity="left|top"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/label_note"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <Button
          android:id="@+id/buttonSave"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/buttonAddChild"
          android:layout_alignBottom="@+id/buttonAddChild"
          android:layout_toRightOf="@+id/textView5"
          android:background="@drawable/round_corners"
          android:text="@string/label_button_complete_household" />

      <Button
          android:id="@+id/buttonAddChild"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/editTextNote"
          android:layout_marginTop="30dp"
          android:layout_toRightOf="@+id/editTextAge"
          android:background="@drawable/round_corners"
          android:text="@string/label_button_add_child" />
    
</RelativeLayout>